nohup.out
Traceback (most recent call last):
  File "/usr/lib/python2.7/runpy.py", line 162, in _run_module_as_main
    "__main__", fname, loader, pkg_name)
  File "/usr/lib/python2.7/runpy.py", line 72, in _run_code
    exec code in run_globals
  File "/home/joseph/Documents/GitHub/bitcoin-abe/Abe/abe.py", line 32, in <module>
    import DataStore
  File "Abe/DataStore.py", line 3158
    return received - sent
SyntaxError: 'return' outside function
Traceback (most recent call last):
  File "/usr/lib/python2.7/runpy.py", line 162, in _run_module_as_main
    "__main__", fname, loader, pkg_name)
  File "/usr/lib/python2.7/runpy.py", line 72, in _run_code
    exec code in run_globals
  File "/home/joseph/Documents/GitHub/bitcoin-abe/Abe/abe.py", line 32, in <module>
    import DataStore
  File "Abe/DataStore.py", line 3158
    return received - sent
SyntaxError: 'return' outside function
RPC failed: [Errno socket error] [Errno 111] Connection refused
catch_up_rpc: abort
Opened /home/joseph/.AuroraCoin/blk0001.dat
block_tx 95744 445745
block_tx 95744 445746
block_tx 95744 445747
commit
2015-02-03 12:24:53,974 - __Aur-Wallet__ - INFO - Abe initialized.
Abe initialized.
2015-02-03 12:24:53,980 - __Aur-Wallet__ - WARNING - Listening on http://localhost:3333
Listening on http://localhost:3333
Traceback (most recent call last):
  File "/usr/lib/python2.7/runpy.py", line 151, in _run_module_as_main
    mod_name, loader, code, fname = _get_module_details(mod_name)
  File "/usr/lib/python2.7/runpy.py", line 113, in _get_module_details
    code = loader.get_code(mod_name)
  File "/usr/lib/python2.7/pkgutil.py", line 283, in get_code
    self.code = compile(source, self.filename, 'exec')
  File "/home/joseph/Documents/GitHub/bitcoin-abe/Abe/abe.py", line 1319
    tx_hash = abe.store.hashout_hex(tx_hash)
                                           ^
IndentationError: unindent does not match any outer indentation level
